se genera carta

--- a/src/index.html
+++ b/src/index.html
@@ -12,18 +12,22 @@
     />
     <link rel="shortcut icon" href="./4geeks.ico" />
   </head>
-  <body>
-    <div class="container-fluid text-center">
-      <h1 class="mt-5">Hello Rigo!</h1>
-      <img src="./rigo-baby.jpg" />
-      <p class="alert alert-warning mt-4">
-        If this text is <b>not</b> centered and <b>yellow</b>, you probably have
-        an error
-      </p>
-      <div class="fixed-bottom p-4">
-        Made with ❤️ by
-        <a href="https://www.4geeksacademy.com">4Geeks Academy</a>
-      </div>
-    </div>
+  <body class="cuerpo ">
+<div class="container">
+  <div class="row justify-content-center">
+ <div class=" card  " style="width: 225px ; height: 300px;"  >
+  <div class="up"></div>
+  <div class="numeros"></div>
+  <div class= "down" style= "-webkit-transform:rotate(-180deg)" class="float-end "></div>
+  </div>
+    
+  </div>
+  <button id = "press" class="btn btn-outline-dark d-grid col-6 mx-auto"> Press</button>
+</div>
+
   </body>
-</html>
+  <script scr="app.js"></script>
+</html></html>
+
+
+
